--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "16.1.4",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "7.2.4"
+    "mongoose": "7.2.4",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
